--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style type="text/css">
 	*{
   box-sizing: border-box;
@@ -198,6 +201,9 @@ section p::after{
 
 
 </style>
+
+	
+</head>
 
 <nav id="navbar">
 	<ul>
