--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ section p{
 	border-bottom-left-radius: 15px;
 }
 img{
-  width: auto;
+  max-width: 100%;
   height: 40em;
   border: 5px solid rgb(0,24,73);
   border-bottom: 10px solid rgb(0,24,73);
