--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ a{
 
 #welcome-section h1{
   color: white;
-  font-size: 120px;
+  font-size: 7em;
   position: absolute;
   top: 35%;
   right: 25%;
