--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ a{
   top: 35%;
   right: 25%;
   text-align: center;
-  font-family: impact;
+  font-family: impact, fantasy;
   animation: anim 10s linear infinite;
 }
 @keyframes anim{
@@ -221,14 +221,14 @@ section p::after{
   
 	<div id="l2">
 		
-		<img src="img/lp.JPG"></img>
+		<img src="img/lp.jpg"></img>
 		<a href="https://codepen.io/twoabdulrasaq/pen/OJMRKwZ">
 		<h2 id="mem" class="project-tile">Product Landing Page</h2></a>
 	</div>
   
 	<div id="l3">
 
-		<img src="img/dp.JPG"></img>
+		<img src="img/dp.jpg"></img>
 		<a href="https://codepen.io/twoabdulrasaq/pen/wvMrKVQ?editors=1100">
 		<h2 id="mem" class="project-tile">Technical Documentation Page</h2></a>
 	</div>
