--- a/index.html
+++ b/index.html
@@ -417,14 +417,14 @@ section p::after{
   
 	<div id="l2">
 		
-		<img src="img/lp.jpg"></img>
+		<img src="img/lp.JPG"></img>
 		<a href="https://codepen.io/twoabdulrasaq/pen/OJMRKwZ">
 		<h2 id="mem" class="project-tile">Product Landing Page</h2></a>
 	</div>
   
 	<div id="l3">
 
-		<img src="img/dp.jpg"></img>
+		<img src="img/dp.JPG"></img>
 		<a href="https://codepen.io/twoabdulrasaq/pen/wvMrKVQ?editors=1100">
 		<h2 id="mem" class="project-tile">Technical Documentation Page</h2></a>
 	</div>
